--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 # The simple shell project.
 
-Usman Abdulhamid <uthmanghamzaki@gmial.com>
-Israel 
+Usman Abdulhamid
+Israel Azeez
